<resources>
    <string name="app_name">Easy Life</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="menu_home">Home</string>
    <string name="menu_home_view">Home View</string>
    <string name="menu_lighting">Lighting</string>
    <string name="menu_AC">A/C</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_gallery">Security</string>
    <string name="menu_Intercom">Intercom</string>
    <string name="menu_Settings">Settings</string>



    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
</resources>